# met-num

./: CMakeLists.txt  MapMatrix.cpp  MapMatrix.h  VectorMapMatrix.cpp
PageRank/: CMakeLists.txt  Makefile  MapMatrix.cpp  MapMatrix.h  Matriz.cpp  Matriz.h  Util.cpp  Util.h  VectorMapMatrix.cpp  VectorMapMatrix.h  debugMatrices.cpp  main  main.cpp  mediciones.txt  mediciones2.txt  mult.cpp
matlab/: tp1.m
mediciones/: experimentacion cualitativa.ipynb  experimentacion cuantitativa.ipynb  mediciones.csv  mediciones.py  mediciones_aleatorio.cvs  mediciones_camino_simple.cvs  tp1
mediciones/entradas/: entrada00003  entrada00004  entrada00005  entrada00006  entrada00007  entrada00008  entrada00009  entrada00010  entrada00011  entrada00012  entrada00013  entrada00014  entrada00015  entrada00016  entrada00017  entrada00018  entrada00019
mediciones/entradas_aleatorio/: entrada100000000.0  entrada100000000.0.out  entrada100000000.1  entrada100000000.1.out  entrada100000000.2  entrada100000000.2.out  entrada100000000.3  entrada100000000.3.out  entrada100000000.4  entrada100000000.4.out  entrada100000000.5  entrada100000000.5.out  entrada100000000.6  entrada100000000.6.out  entrada100000000.7  entrada100000000.7.out  entrada100000000.8  entrada100000000.8.out  entrada100000000.9  entrada100000000.9.out  entrada100000001.0  entrada100000001.0.out  entrada200000000.0  entrada200000000.1  entrada200000000.1.out  entrada200000000.2  entrada200000000.2.out  entrada200000000.3  entrada200000000.3.out  entrada200000000.4  entrada200000000.4.out  entrada200000000.5  (+74 more)
(+1046 files in other folders)
